# mystat

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  empty_example.cpp
include/mystat/: mystat.hpp
source/: helper_.cpp  helper_.hpp  mystat.cpp
test/: CMakeLists.txt
test/source/: mystat_test.cpp
